--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "*.js"
   ],
   "dependencies": {
+    "bootstrap": "4.5.3",
+    "bootstrap-vue": "^2.21.2",
     "color": "^3.1.3",
     "core-js": "^3.6.5",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "uswds": "^2.9.0",
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
