--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "*.js"
   ],
   "dependencies": {
+    "@vuepress/theme-vue": "^1.8.2",
     "bootstrap": "4.5.3",
     "bootstrap-vue": "^2.21.2",
     "color": "^3.1.3",
     "core-js": "^3.6.5",
+    "fuse.js": "^6.4.6",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "string-similarity": "^4.0.4",
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
