--- a/package.json
+++ b/package.json
@@ -24,14 +24,11 @@
   ],
   "dependencies": {
     "@vuepress/theme-vue": "^1.8.2",
-    "bootstrap": "4.5.3",
-    "bootstrap-vue": "^2.21.2",
     "color": "^3.1.3",
     "core-js": "^3.6.5",
     "fuse.js": "^6.4.6",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "string-similarity": "^4.0.4",
     "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
@@ -41,6 +38,7 @@
     "@vue/cli-service": "~4.4.0",
     "@vue/test-utils": "^1.1.1",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.1.3",
     "chance": "^1.1.7",
     "eslint": "^7.15.0",
     "eslint-plugin-jest": "^24.1.3",
