--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "*.js"
   ],
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@vuepress/theme-vue": "^1.8.2",
     "color": "^3.1.3",
     "core-js": "^3.6.5",
